# cpp-jam

./: .clang-format  .clangd  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  CODESTYLE.md  DEPRECATED.md  Makefile  README.md  get_version.sh  vcpkg.json
src/: CMakeLists.txt
src/TODO_qtils/: asio_buffer.hpp  bytes_std_hash.hpp  from_span.hpp  make_shared_private.hpp  map_entry.hpp  optional.hpp  std_hash_of.hpp  variant_get.hpp
src/TODO_qtils/macro/: forward.hpp  make_shared.hpp  move.hpp  weak.hpp
src/TODO_scale/: scale.hpp
src/app/: CMakeLists.txt  application.hpp  build_version.hpp  chain_spec.hpp  config.yaml  configuration.cpp  configuration.hpp  configurator.cpp  configurator.hpp  state_manager.hpp
src/app/impl/: application_impl.cpp  application_impl.hpp  chain_spec_impl.cpp  chain_spec_impl.hpp  state_manager_impl.cpp  state_manager_impl.hpp  watchdog.hpp
src/apps/: CMakeLists.txt  jam_node.cpp
src/blockchain/: CMakeLists.txt  block_header_repository.hpp  block_storage.hpp  block_storage_error.hpp  block_tree.hpp  block_tree_error.hpp  genesis_block_hash.cpp  genesis_block_hash.hpp  genesis_block_header.hpp
src/blockchain/impl/: block_storage_error.cpp  block_storage_impl.cpp  block_storage_impl.hpp  block_storage_initializer.cpp  block_storage_initializer.hpp  block_tree_error.cpp  block_tree_impl.cpp  block_tree_impl.hpp  block_tree_initializer.cpp  block_tree_initializer.hpp  cached_tree.cpp  cached_tree.hpp  genesis_block_header_impl.cpp  genesis_block_header_impl.hpp  justification_storage_policy.cpp  justification_storage_policy.hpp  storage_util.cpp  storage_util.hpp
src/clock/: clock.hpp
src/clock/impl/: clock_impl.cpp  clock_impl.hpp
src/coro/: coro.hpp  future.hpp  handler.hpp  init.hpp  io_context_ptr.hpp  set_thread.hpp  spawn.hpp  weak.hpp  yield.hpp
src/crypto/: bandersnatch.hpp  blake.hpp  ed25519.hpp  hash_types.hpp  hasher.hpp  keccak.hpp
src/crypto/blake2/: blake2b.cpp  blake2b.h  blake2s.cpp  blake2s.h
src/crypto/hasher/: hasher_impl.cpp  hasher_impl.hpp
src/crypto/keccak/: keccak.hpp
src/crypto/sha/: sha256.cpp  sha256.hpp
src/crypto/twox/: CMakeLists.txt  twox.cpp  twox.hpp
src/executable/: CMakeLists.txt  dlopen.cpp  experiment.cpp  jam_node.cpp
src/injector/: CMakeLists.txt  bind_by_lambda.hpp  dont_inject.hpp  lazy.hpp  node_injector.cpp  node_injector.hpp
src/jam/: CMakeLists.txt  bandersnatch.hpp  blake.hpp  ed25519.hpp  empty.hpp  keccak.hpp  scale.hpp  schnorrkel.hpp  tagged.hpp  unused.hpp  variant_alternative.hpp
src/jam/coro/: future.hpp  handler.hpp  init.hpp  set_thread.hpp  spawn.hpp  weak.hpp
src/jam/snp/: CMakeLists.txt  example_chat.cpp
src/jam_types/: block.hpp  block_data.hpp  block_header.hpp  config-dynamic.hpp  extricsic.hpp  justification.hpp  types.tmp.hpp
src/loaders/: CMakeLists.txt  loader.hpp  pvm_loader.cpp  pvm_loader.hpp  request_response.hpp
src/loaders/impl/: example_loader.hpp  networking_loader.hpp  synchronizer_loader.hpp
src/log/: CMakeLists.txt  configurator.hpp  logger.cpp  logger.hpp  profiling_logger.cpp  profiling_logger.hpp  simple.hpp  trace_macros.hpp
src/log/formatters/: variant.hpp
src/merkle_tree/: CMakeLists.txt  archive_backend.cpp  db.cpp  merkle_tree.cpp  nomt_backend.cpp
src/metrics/: exposer.hpp  handler.hpp  histogram_timer.hpp  metrics.hpp  registry.hpp  session.hpp
src/metrics/impl/: exposer_impl.cpp  exposer_impl.hpp  metrics_watcher.cpp  metrics_watcher.hpp  session_impl.cpp  session_impl.hpp
src/modules/: CMakeLists.txt  module.hpp  module_loader.cpp  module_loader.hpp
src/modules/block_production/: CMakeLists.txt  block_tree.cpp  block_tree.hpp  module.cpp
src/modules/example/: CMakeLists.txt  example.cpp  example.hpp  interfaces.hpp  module.cpp
src/modules/networking/: CMakeLists.txt  interfaces.hpp  module.cpp  networking.cpp  networking.hpp
src/modules/pvm/: CMakeLists.txt  module.cpp  pvm.cpp  pvm.hpp
src/modules/shared/: networking_types.tmp.hpp  synchronizer_types.tmp.hpp
src/modules/synchronizer/: CMakeLists.txt  interfaces.hpp  module.cpp  synchronizer.cpp  synchronizer.hpp
src/scale/: jam_scale.hpp
src/se/: CMakeLists.txt  async_dispatcher.cpp  subscription.cpp  subscription.hpp  subscription_fwd.hpp  sync_dispatcher.cpp
src/se/impl/: async_dispatcher.cpp  async_dispatcher_impl.hpp  common.hpp  compile-time_murmur2.hpp  dispatcher.hpp  scheduler.hpp  scheduler_impl.hpp  subscriber.hpp  subscriber_impl.hpp  subscription_engine.hpp  subscription_manager.hpp  sync_dispatcher_impl.hpp  thread_handler.hpp
src/snp/: CMakeLists.txt  example_chat.cpp  peer_id.hpp
src/snp/connections/: address.hpp  alpn.cpp  alpn.hpp  config.hpp  connection.cpp  connection.hpp  connection_id.hpp  connection_id_counter.hpp  connection_info.hpp  connection_ptr.hpp  connections.cpp  connections.hpp  controller.hpp  dns_name.cpp  dns_name.hpp  error.hpp  key.hpp  message_size.hpp  port.hpp  prefer_key.cpp  stream.cpp  (+7 more)
src/storage/: CMakeLists.txt  buffer_map_types.hpp  database_error.cpp  database_error.hpp  predefined_keys.hpp  spaced_storage.hpp  spaces.hpp  storage_error.cpp  storage_error.hpp
src/types/: genesis_hash.hpp
src/utils/: channel.hpp  ctor_limiters.hpp  fd_limit.cpp  fd_limit.hpp  parsers.hpp  request_id.hpp  retain_if.hpp  tuner.cpp  tuner.hpp
test/: CMakeLists.txt
test-vectors/: .gitignore  CMakeLists.txt  asn1.cmake  common.hpp  config-types-scale.hpp  config-types.hpp  diff.hpp  vectors.hpp
test-vectors/authorizations/: CMakeLists.txt  authorizations.hpp  authorizations.test.cpp  types.test.cpp  vectors.hpp
test-vectors/disputes/: CMakeLists.txt  disputes.hpp  disputes.test.cpp  types.test.cpp  vectors.hpp
test-vectors/history/: .gitignore  CMakeLists.txt  history.hpp  history.test.cpp  types.test.cpp  vectors.hpp
test-vectors/safrole/: .gitignore  CMakeLists.txt  safrole.hpp  safrole.test.cpp  types.test.cpp  vectors.hpp
test/merkle_tree/: codec_test.cpp  compat_test.cpp  primitives_test.cpp  tree_test.cpp
vcpkg-overlay/blake2/: CMakeLists.txt  portfile.cmake  vcpkg.json
(+142 files in other folders)
